# chapar

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  Makefile.coq.local  Makefile.ml-files  README.md  README.txt  Settings.txt  Settings1.txt  _CoqProject  batchrundetach  chapar-kv-stores.install  clearnodes  common  coq-chapar-stores.opam  coq-chapar.opam  default.nix  dune-project  makefile  meta.yml  opam  printnodesout  run
.github/workflows/: coq-ci.yml  docker-action.yml  docker-ci.yml  nix-action.yml
coq/: Extract.v  KVSAlg1.ml  KVSAlg1.mli  KVSAlg1.v  KVSAlg2.ml  KVSAlg2.mli  KVSAlg2.v  KVSAlg3.ml  KVSAlg3.mli  KVSAlg3.v  KVStore.glob  KVStore.v  KVStore.vo  Makefile  Predefs.v.orig  ReflectiveAbstractSemantics.v  _CoqProject  dune
coq/Algorithms/: Extract.v  ExtractAlgorithm.v  KVSAlg1.v  KVSAlg2.v  KVSAlg3.v
coq/Examples/: Clients.v  ListClient.v
coq/Framework/: Extract.v  KVSAlg1.v  KVSAlg2.v  KVStore.v  ReflectiveAbstractSemantics.v
coq/Lib/: Predefs.glob  Predefs.v  Predefs.vo  Varith.v  Vbase.v  Vlist.v  Vlistbase.v  extralib.v
ml/: ExtractAlgorithm1.v  ExtractAlgorithm2.v  ExtractAlgorithm3.v  Notes.txt  algorithm2.ml  common.ml  dune  experiment.ml  launchStore1.ml  launchStore3.ml  makefile
ml/MLLib/ocamlbase/: LICENSE  META  caml.ml  charStream.ml  charStream.mli  dynArray.ml  dynArray.mli  extArray.ml  extArray.mli  extChar.ml  extChar.mli  extList.ml  extList.mli  extString.ml  extString.mli  fMap.ml  fMap.mli  fSet.ml  fSet.mli  fun.ml  fun.mli  io.ml  io.mli  mParser.ml  mParser.mli  priorityQueue.ml  priorityQueue.mli  std.ml
ml/bench/: benchgen.ml  dune  experiment.ml
ml/store1/: ExtractAlgorithm1.v  algorithm1.ml
ml/store2/: dune  launchStore2.ml
ml/store3/: algorithm3.ml  launchStore3.ml
ml/utils/: algorithm.ml  benchprog.ml  configuration.ml  dune  util.ml
scripts/: Settings2.txt  batchrun  fetchresults  printlauncherout
src/bench/: benchgen.ml  dune  experiment.ml
src/store1/: dune  launchStore1.ml
src/store2/: algorithm2.ml
src/store3/: ExtractAlgorithm3.v  dune
src/utils/: commonbench.ml  readConfig.ml  runtime.ml
theories/Algorithms/: ExtractAlgorithm.v
theories/Examples/: Clients.v
theories/Lib/: extralib.v
