opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/chapar"
dev-repo: "git+https://github.com/coq-community/chapar.git"
bug-reports: "https://github.com/coq-community/chapar/issues"
license: "MIT"

synopsis: "Three executable causally consistent distributed key-value stores"
description: """
Three key-value stores, verified to be causally consistent in
the Coq proof assistant and extracted to executable code.
"""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {>= "3.5"}
  "coq" {>= "8.14"}
  "batteries" {>= "2.8.0"}
  "coq-chapar" {= version}
]

authors: [
  "Mohsen Lesani"
  "Christian J. Bell"
  "Adam Chlipala"
]
