(executable
 (name benchgen)
 (flags :standard -w -35)
 (public_name chaparBenchgen)
 (libraries utils)
 (modules benchgen)
 (package coq-chapar-stores))

(executable
 (name experiment)
 (flags :standard -w -33-35)
;(public_name chaparExperiment)
 (libraries utils)
;(package coq-chapar-stores)
 (modules experiment))
